[gd_scene load_steps=15 format=3 uid="uid://bht0ln2ftshrw"]

[ext_resource type="FontFile" uid="uid://njn2rf7rj4ph" path="res://fonts/roboto-32b.tres" id="1"]
[ext_resource type="FontFile" uid="uid://bxcl265jykrk0" path="res://fonts/roboto-16r.tres" id="2"]
[ext_resource type="Script" uid="uid://dwpfnhluy8h4e" path="res://scenes/LoginView/LoginView.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bghbav6kh0lsl" path="res://fonts/roboto-16b.tres" id="4"]
[ext_resource type="Script" uid="uid://bx0bhh73kw3q7" path="res://scenes/LoginView/EnterCredentials.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://e0l4pytsqbp1" path="res://logo.png" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.164706, 0.505882, 0.188235, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.203922, 0.623529, 0.235294, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.145098, 0.454902, 0.164706, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="7"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.529412, 0.529412, 0.219608, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="8"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.631373, 0.631373, 0.258824, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="9"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.47, 0.47, 0.1927, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="11"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.529412, 0.258824, 0.215686, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="10"]
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.6, 0.294118, 0.247059, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LoginView" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource("3")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Left" type="VBoxContainer" parent="HB"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="HB/Left"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="HB/Left"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "EOS Godot Sample"

[node name="Desc" type="RichTextLabel" parent="HB/Left"]
layout_mode = 2
theme_override_fonts/bold_font = ExtResource("4")
bbcode_enabled = true
text = "This sample project demonstrates how to use Epic Online Services SDK in Godot using a SDK wrapper.

This project is not affiliated with Epic Games Inc nor does it endorse Epic Online Services.
Use at your own risk."

[node name="Right" type="VBoxContainer" parent="HB"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="ChooseMethod" type="VBoxContainer" parent="HB/Right"]
layout_mode = 2

[node name="LoginTypeLabel" type="Label" parent="HB/Right/ChooseMethod"]
layout_mode = 2
text = "Login Type"

[node name="LoginTypeButton" type="OptionButton" parent="HB/Right/ChooseMethod"]
layout_mode = 2

[node name="EnterCredentials" type="VBoxContainer" parent="HB/Right"]
visible = false
layout_mode = 2
script = ExtResource("5")

[node name="IdLabel" type="Label" parent="HB/Right/EnterCredentials"]
layout_mode = 2
text = "Devtool Server URL"

[node name="IdLineEdit" type="LineEdit" parent="HB/Right/EnterCredentials"]
layout_mode = 2
text = "localhost:8000"

[node name="TokenLabel" type="Label" parent="HB/Right/EnterCredentials"]
layout_mode = 2
text = "Credential Name"

[node name="TokenLineEdit" type="LineEdit" parent="HB/Right/EnterCredentials"]
layout_mode = 2
secret = true

[node name="LoginButton" type="Button" parent="HB/Right"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
theme_override_styles/focus = SubResource("1")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("1")
text = "Log in"

[node name="BackButton" type="Button" parent="HB/Right"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
theme_override_styles/focus = SubResource("7")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
theme_override_styles/normal = SubResource("7")
text = "Back"

[node name="LoginStatus" type="Label" parent="HB/Right"]
visible = false
layout_mode = 2
text = "Logging in..."

[node name="RetryLoginButton" type="Button" parent="HB/Right"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
theme_override_styles/focus = SubResource("7")
theme_override_styles/hover = SubResource("8")
theme_override_styles/pressed = SubResource("9")
theme_override_styles/normal = SubResource("7")
text = "Retry"

[node name="LogoutButton" type="Button" parent="HB/Right"]
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2")
theme_override_styles/focus = SubResource("11")
theme_override_styles/hover = SubResource("10")
theme_override_styles/pressed = SubResource("10")
theme_override_styles/normal = SubResource("11")
text = "Logout"
